[package]
name = "rebond-tx-builder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Rotko Networks OÜ"]
description = "CLI tool to build signed rebond transactions for Asset Hub staking recovery"

[workspace]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
parity-scale-codec = { version = "3", features = ["derive"] }
schnorrkel = "0.11"
blake2 = "0.10"
bip39 = "2.0"
bs58 = "0.5"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
